chore: configure backend for production deployment and security